@@ -1,4 +1,5 @@
 SVN
+* using `compile` to run `rake tests`
 * ask to save modified buffers before run rake
 * add "quick switch" support to models and unit tests
 
